# ai-chatlog-converter

./: .gitignore  README.md  input.html  main.py  pyproject.toml
.github/instructions/: global.instructions.md
chatlog_converter/: __init__.py  cli.py  parser.py
docs/: chatlog_converter.md
sample_data/: scheme.json
